<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_hydrotest_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gu1307303@gmail.com">egor</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ros2_hydrotest</exec_depend>
  <exec_depend>ros2_hydrotest_service</exec_depend>
  <exec_depend>extra_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
